Added menu and welcome part

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Harty Pard Dekoracje</title>
   </head>
   <body>
-    <div id="whole">
+    <div class="hero">
       <nav id="header">
         <a id="logo" href="index.html"
           ><image class="logo" src="HPlogopng.png"></image
@@ -24,9 +24,18 @@
           <li><a href="#">Usługi</a></li>
           <li><a href="#">Kontakt</a></li>
         </ul>
-        <a id="ig" href="#"><image class="ig" src="ig.png"></image></a>
-        <a id="fb" href="#"><image class="fb" src="fb.png"></image></a>
+        <div class="social">
+          <a id="ig" href="#"><image class="ig" src="ig.png"></image></a>
+          <a id="fb" href="#"><image class="fb" src="fb.png"></image></a>
+        </div>
       </nav>
+      <div class="detel">
+        <h1>
+          Cześć,<br />
+          nazywam się <span>Martyna</span>
+        </h1>
+        <h2>A to jest <span>Harty Pard Dekoracje</span></h2>
+      </div>
     </div>
   </body>
 </html>
