--- a/index.html
+++ b/index.html
@@ -11,31 +11,48 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.2.0/css/all.css"
+    />
     <title>Harty Pard Dekoracje</title>
   </head>
   <body>
     <div class="hero">
-      <nav id="header">
-        <a id="logo" href="index.html"
-          ><image class="logo" src="HPlogopng.png"></image
-        ></a>
-        <ul>
-          <li><a href="#">O mnie</a></li>
-          <li><a href="#">Usługi</a></li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-        <div class="social">
-          <a id="ig" href="#"><image class="ig" src="ig.png"></image></a>
-          <a id="fb" href="#"><image class="fb" src="fb.png"></image></a>
+      <header class="header">
+        <nav id="header_navigation">
+          <a id="logo" href="index.html"
+            ><image class="logo" src="HPlogopng.png"></image
+          ></a>
+          <ul>
+            <li><a href="#">O mnie</a></li>
+            <li><a href="#">Usługi</a></li>
+            <li><a href="#">Kontakt</a></li>
+          </ul>
+          <div class="social">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-square-facebook"></i>
+          </div>
+        </nav>
+        <div class="detel">
+          <h1>
+            Cześć,<br />
+            nazywam się <span>Martyna.</span>
+          </h1>
+          <h2>A to jest <span>Harty Pard Dekoracje</span></h2>
+          <div class="button">
+            <a href="#" class="btn btn1">zapraszam mój blog</a>
+          </div>
         </div>
-      </nav>
-      <div class="detel">
-        <h1>
-          Cześć,<br />
-          nazywam się <span>Martyna</span>
-        </h1>
-        <h2>A to jest <span>Harty Pard Dekoracje</span></h2>
-      </div>
+        <div class="images">
+          <img src="shape.png" class="shape" />
+          <img
+            src="marti.png"
+            alt="Beautiful girl Martyna with hat on her head."
+            class="marti"
+          />
+        </div>
+      </header>
     </div>
   </body>
 </html>
