--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,11 +25,19 @@
           <a id="logo" href="index.html"
             ><image class="logo" src="HPlogopng.png"></image
           ></a>
-          <ul>
-            <li><a href="#">O mnie</a></li>
-            <li><a href="#">Usługi</a></li>
-            <li><a href="#">Kontakt</a></li>
-          </ul>
+          <div class="navbar-links">
+            <ul>
+              <li><a href="#">O mnie</a></li>
+              <li><a href="#">Usługi</a></li>
+              <li><a href="#">Galeria</a></li>
+              <li><a href="#">Kontakt</a></li>
+            </ul>
+          </div>
+          <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
           <div class="social">
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-square-facebook"></i>
@@ -41,7 +50,7 @@
           </h1>
           <h2>A to jest <span>Harty Pard Dekoracje</span></h2>
           <div class="button">
-            <a href="#" class="btn btn1">zapraszam mój blog</a>
+            <a href="#" class="btn btn1">zajrzyj na mój blog</a>
           </div>
         </div>
         <div class="images">
@@ -54,5 +63,6 @@
         </div>
       </header>
     </div>
+    <section></section>
   </body>
 </html>
