A lot of changes... new concpet

--- a/index.html
+++ b/index.html
@@ -21,28 +21,30 @@
   <body>
     <div class="hero">
       <header class="header">
-        <nav id="header_navigation">
-          <a id="logo" href="index.html"
-            ><image class="logo" src="HPlogopng.png"></image
-          ></a>
-          <div class="navbar-links">
-            <ul>
-              <li><a href="#">O mnie</a></li>
-              <li><a href="#">Usługi</a></li>
-              <li><a href="#">Galeria</a></li>
-              <li><a href="#">Kontakt</a></li>
-            </ul>
-          </div>
-          <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </a>
-          <div class="social">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-          </div>
-        </nav>
+        <div class="container">
+          <nav id="header_navigation">
+            <a id="logo" href="index.html"
+              ><image class="logo" src="images/HPlogopng.png"></image
+            ></a>
+            <div class="navbar-links">
+              <ul>
+                <li><a href="#">O mnie</a></li>
+                <li><a href="#">Usługi</a></li>
+                <li><a href="#">Galeria</a></li>
+                <li><a href="#">Kontakt</a></li>
+              </ul>
+            </div>
+            <a href="#" class="toggle-button">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+            </a>
+            <div class="social">
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-square-facebook"></i>
+            </div>
+          </nav>
+        </div>
         <div class="detel">
           <h1>
             Cześć,<br />
@@ -52,14 +54,6 @@
           <div class="button">
             <a href="#" class="btn btn1">zajrzyj na mój blog</a>
           </div>
-        </div>
-        <div class="images">
-          <img src="shape.png" class="shape" />
-          <img
-            src="marti.png"
-            alt="Beautiful girl Martyna with hat on her head."
-            class="marti"
-          />
         </div>
       </header>
     </div>
