Added about section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             ></a>
             <div class="navbar-links">
               <ul id="sidemenu">
-                <li><a href="#">O mnie</a></li>
+                <li><a href="#about">O mnie</a></li>
                 <li><a href="#">Usługi</a></li>
                 <li><a href="#">Galeria</a></li>
                 <li><a href="#">Kontakt</a></li>
@@ -53,7 +53,21 @@
         </div>
       </header>
     </div>
-    <section></section>
+    <!----------O mnie-------->
+    <section id="about">
+      <div class="main">
+        <div class="about-description">
+          <h1>Kim jestem?</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+            laboriosam, nulla cupiditate omnis blanditiis perferendis quo
+            numquam, saepe doloribus temporibus consequuntur. Nostrum voluptatum
+            a voluptate impedit facere laborum aliquam ea.
+          </p>
+        </div>
+        <img src="images/myphoto.png" alt="" id="me-photo" />
+      </div>
+    </section>
 
     <script>
       var sidemenu = document.getElementById("sidemenu");
